# veptools

./: .gitignore  LICENSE  Makefile  README.md  environment.yaml  md5  pyproject.toml  setup.py  sha256
.github/workflows/: dev.yaml  lint.yaml  pylint.yml  python-package.yml  test.yaml
src/: veptools.py
src/modules/: logger.py  mprofile.py
tests/: test_aggregate.py  test_logger.py  test_mprofile.py  test_parsers.py  test_pgimpact.py
tests/data/: aggregate_output.csv  aggregate_output.tsv  gene_list.txt  input_A.tsv  input_B.tsv  mprofile_genes.txt  mprofile_input_A.tsv  mprofile_input_B.tsv  sample_info.csv  sample_info.tsv
tests/output/: mprofile_output.csv
veptools/: veptools.py
veptools/modules/: aggregate.py  logger.py  mprofile.py  pgimpact.py
